--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> MY WEBSITE </title>
 </head>
 <body>
-    
-    <table>
+   <div class="container">
+
+<div class="row">
+
+<div class="col">
+
+    <b><u>  LOGIN FORM</u></b>
+    <table class="table">
+
         <tr>
             <td>username</td>
-            <td><input type="text"></td>
+            <td><input type="text" class="form-control"></td>
         </tr>
 
         <tr>
             <td>password</td>
-            <td><input type="text"></td>
+            <td><input type="text" class="form-control"></td>
         </tr>
 
 <tr>
     <td></td>
-    <td><button>LOGIN</button></td>
+    <td><button class="btn btn-dark">LOGIN</button></td>
 </tr>
 
+
+
+
+
+
     </table>
+
+
+
+
+</div>
+
+
+
+</div>
+
+
+
+   </div> 
 </body>
 </html>
