changed button color of Students.html

--- a/student.html
+++ b/student.html
@@ -41,7 +41,7 @@
 
 <tr>
     <td></td>
-    <td><button class="btn btn-danger">SUBMIT
+    <td><button class="btn btn-dark">SUBMIT
     </button></td>
 </tr>
 
