--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="row">
 
-<div class="col">
+<div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
     <b><u>  LOGIN FORM</u></b>
     <table class="table">
